Bump versions and prepare for maven central